# MERMES

./: .gitignore  README.md  api_key_setup_anthropic.sh  api_key_setup_openai.sh  main.py  pyproject.toml  requirements.txt
electro_extract/: helper.py
electro_extract/extract/: 0_user_message_rxn_conditions_with single shot prompt.txt  0_user_sample_response_rxn_conditions_json.txt  extract_figure.py  extract_html.py  prompt.py
electro_extract/model/: anthropic_model.py  chat.py  google_model.py  openai_model.py
electro_extract/visualization/: show_table.py
mermes/: main.py  wizard.py
mermes/extract/: 0_user_message_rxn_conditions_with single shot prompt.txt  0_user_sample_response_rxn_conditions_json  extract_figure.py  extract_html.py  helper.py  prompt.py
mermes/model/: anthropic_model.py  chat.py  google_model.py  openai_model.py
